force-app/main/default/objects/cdcpc__SizingRequest__c/cdcpc__SizingRequest__c.object-meta.xml
<CustomObject>
    <label>Sizing Requests</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Sizing Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sizing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>