force-app/main/default/objects/cdcpc__SizingRequest__c/fields/cdcpc__ContactId__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ContactId__c</fullName>
    <description>CC: Link to User.ContactId field</description>
    <formula>Owner:User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactId</label>
    <type>Text</type>
</CustomField>