force-app/main/default/objects/cdcpc__SizingRequest__c/fields/cdcpc__Errors_on_Quote_Processing__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Errors_on_Quote_Processing__c</fullName>
    <description>CC - Text area to place any errors that may occur when processing Sizing Request into Salesforce CPQ Quote record.</description>
    <label>Errors on Quote Processing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>