force-app/main/default/objects/cdcpc__SizingRequest__c/fields/cdcpc__Is_Ready_for_Quote__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Is_Ready_for_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ready for Quote</label>
    <type>Checkbox</type>
</CustomField>