force-app/main/default/objects/cdcpc__SizingRequest__c/fields/cdcpc__Processed_to_quote__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Processed_to_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC - This checkbox will represent this sizing request having been successfully processed into a Salesforce CPQ Quote record.</description>
    <label>Processed to quote</label>
    <type>Checkbox</type>
</CustomField>