force-app/main/default/objects/cdcpc__SizingRequest__c/fields/cdcpc__ProjectName__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ProjectName__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>